# heim

./: .dockerignore  .drone.yml  .gitignore  .gitmodules  .travis.yml  BUILD.bazel  Dockerfile  Gopkg.toml  LICENSE.md  README.md  WORKSPACE  docker-compose.yml  fetch-deps.sh  fig.yml  go.mod  go.sum  heim.yml  test.sh
aws/kms/: BUILD.bazel  kms.go  kms_test.go
backend/: BUILD.bazel  Dockerfile  agent.go  auth.go  backend.go  command.go  command_test.go  commands.go  config.go  crypto.go  grants.go  grants_test.go  handlers.go  identity.go  integration.go  integration_test.go  integration_tests.go  log.go  log_test.go  logging.go  media.go  message.go  packet.go  packet_test.go  pages.go  room.go  room_test.go  run.sh  server.go  server_test.go  session.go  snowflake.go
backend/cluster/: cluster.go  etcd.go  etcd_test.go
backend/cluster/clustertest/: testetcd.go
backend/cmd/heim-backend/: backend.go
backend/cmd/heim-upgradedb/: upgradedb.go
backend/cmd/heimlich/: heimlich.go
backend/console/: BUILD.bazel  ban.go  cluster.go  handler.go  handler_test.go  lockroom.go  lockroom_test.go  message.go  message_test.go  server.go  staff.go
backend/console/keys/: .gitignore  devkey  devkey.pub
backend/control/: server.go
backend/filestore/: doc.go  filestore.go  filestore_test.go
backend/filestore/server/: main.go
backend/media/: filestore.go
backend/mock/: BUILD.bazel  account.go  agent.go  backend.go  doc.go  emails.go  grants.go  grants_test.go  integration_test.go  jobs.go  log.go  log_test.go  pm.go  room.go  room_test.go  session.go
backend/persist/: backend.go  capability.go  integration_test.go  message.go  presence.go  room.go
backend/proto/: backend.go  identity.go  log.go  room.go
backend/proto/security/: aesgcm_test.go  grants.go  keys.go
backend/psql/: BUILD.bazel  account.go  agent.go  backend.go  ban.go  capability.go  emails.go  integration_test.go  jobs.go  listener.go  media.go  message.go  nick.go  pm.go  presence.go  queries.go  room.go  room_security.go  security.go  sessionlog.go
backend/psql/migrations/: 002-room-keys-and-grants.sql  003-presence.sql  004-bans.sql  005-message-edits.sql  006-ips.sql  007-indexes.sql  008-message-session-ids.sql  009-room-retention-time.sql  010-accounts-staff-and-managers.sql  011-agent-age-limits.sql  011-media.sql  011-verified-personal-ids.sql  012-password-resets.sql  014-message-sender-staff-or-manager.sql  015-account-name.sql  016-session-stats.sql  017-bot-agents.sql  018-bot-session-stats.sql  019-jobs.sql  020-emails.sql  021-staff-otp.sql  022-account-primary-email.sql  022-pm.sql  023-remove-room-capability-constraint.sql  025-pms.sql  (+7 more)
backend/upgradedb/: Dockerfile  run.sh
client/: .eslintignore  .eslintrc  .jshintrc  BUILD.bazel  Dockerfile  gulpfile.babel.js  gulpfile.js  node_modules  package.json
client/emails/: common-txt.js  common.js  email.js  inject-react-attributes.js  password-changed.hdr  password-changed.js  password-changed.txt  password-reset.hdr  password-reset.js  password-reset.txt  room-invitation-welcome.hdr  room-invitation-welcome.js  room-invitation-welcome.txt  room-invitation.hdr  room-invitation.js  room-invitation.txt  verification.hdr  verification.js  verification.txt  welcome.hdr  welcome.js  welcome.txt
client/lib/: BatchTransition.js  ChatTree.js  EventListeners.js  Hooks.js  MessageData.js  Tree.js  actions.js  alert-sound.js  alertSound.js  base.less  batch-transition.js  chat-tree.js  clamp.js  client-reset-password.js  client-room.js  client-verify-email.js  client.js  clientResetPassword.js  clientRoom.js  clientVerifyEmail.js  clipboard-formatter.js  crashed.less  defs.less  dom-walk-forward.js  embed.html  embed.js  emoji.js  event-listeners.js  faux-plugins.js  fauxPlugins.js  fauxplugins.js  fetchAPI.js  find-parent.js  forms.less  heim-url.js  heimURL.js  home.html  home.less  hooks.js  hue-hash.js  (+15 more)
client/site/: about.js  common.js  error.js  home.js  page.js  reset-password.js  site.less  verify-email.js
client/test/: actions-test.js  activity-store-test.js  chat-store-test.js  chat-tree-test.js  emoji-test.js  event-listeners-test.js  eventlisteners-test.js  focus-store-test.js  heim-socket-test.js  hooks-test.js  mention-test.js  message-text-ui-test.js  message-ui-test.js  notification-store-test.js  socket-store-test.js  storage-store-test.js  tree-test.js  update-store-test.js
cluster/: BUILD.bazel  cluster.go  etcd.go  etcd_test.go  integration_test.go
cluster/clustertest/: testetcd.go
cluster/etcd/: BUILD.bazel  etcd.go  etcd_test.go  integration_test.go
heimctl/: BUILD.bazel  main.go
heimctl/activity/: BUILD.bazel  metrics.go  scanner.go  server.go
heimctl/cmd/: BUILD.bazel  activity.go  analyze_stats.go  config.go  help.go  newflags_test.go  presence.go  retention.go  serve.go  subcommands.go  testmail.go  upgrade.go  version.go  worker.go
heimctl/presence/: BUILD.bazel  metrics.go  scanner.go  server.go
heimctl/retention/: BUILD.bazel  metrics.go  scanner.go  server.go
heimctl/worker/: BUILD.bazel  controller.go  emails.go  loop.go  metrics.go  server.go  worker.go
heimlich/: BUILD.bazel  heimlich.go
proto/: BUILD.bazel  account.go  account_test.go  agent.go  auth.go  backend.go  client.go  crypto.go  emails.go  errors.go  grants.go  heim.go  identity.go  identity_test.go  integration_test.go  jobs.go  log.go  media.go  message.go  packet.go  packet_test.go  pm.go  presence.go  room.go  session.go  snowflake.go  time.go
proto/emails/: BUILD.bazel  deliverer.go  emailer.go  emailer_test.go  smtp.go  smtp_test.go  templates.go  templates_test.go
proto/jobs/: BUILD.bazel  claim.go  errors.go  jobs.go
proto/logging/: BUILD.bazel  logging.go
proto/media/: doc.go  mediastore.go  store.go
proto/security/: BUILD.bazel  aesgcm.go  grants.go  grants_test.go  integration_test.go  keypairs.go  keypairs_test.go  keys.go  keys_test.go  kms.go  kms_test.go
proto/snowflake/: BUILD.bazel  snowflake.go
templates/: BUILD.bazel  email.go  email_test.go  templater.go  templater_test.go
tools/js/: BUILD.bazel
(+222 files in other folders)
