load("@io_bazel_rules_go//go:def.bzl", "gazelle", "go_prefix")

gazelle(
    name = "gazelle",
    external = "vendored",
    prefix = "euphoria.io/heim",
)

go_prefix("euphoria.io/heim")

load("//tools/bzl:hzp.bzl", "hzp_binary")

hzp_binary(
    name = "heimctl",
    bin = "//heimctl",
    srcs = [
      "//client:build",
    ],
)
