load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "backend",
    srcs = glob(include=["*.go"], exclude=["*_test.go"]),
    visibility = ["//visibility:public"],
    deps = [
        "//aws/kms",
        "//cluster",
        "//cluster/etcd",
        "//proto",
        "//proto/emails",
        "//proto/jobs",
        "//proto/logging",
        "//proto/security",
        "//proto/snowflake",
        "//templates",
        "//vendor/euphoria.io/scope",
        "//vendor/github.com/gorilla/context:go_default_library",
        "//vendor/github.com/gorilla/mux:go_default_library",
        "//vendor/github.com/gorilla/securecookie:go_default_library",
        "//vendor/github.com/gorilla/websocket:go_default_library",
        "//vendor/github.com/juju/ratelimit:go_default_library",
        "//vendor/github.com/pquerna/otp:go_default_library",
        "//vendor/github.com/prometheus/client_golang/prometheus:go_default_library",
        "//vendor/github.com/savaki/geoip2:go_default_library",
        "//vendor/github.com/smartystreets/goconvey/convey:go_default_library",
        "//vendor/github.com/smartystreets/goconvey/convey/reporting:go_default_library",
        "//vendor/golang.org/x/net/context:go_default_library",
        "//vendor/gopkg.in/yaml.v2:go_default_library",
    ],
)

go_test(
    name = "small",
    srcs = glob(include=["*_test.go"], exclude=["integration_test.go"]),
    library = ":backend",
    deps = ["//vendor/github.com/smartystreets/goconvey/convey:go_default_library"],
    size = "small",
)

go_test(
    name = "integration",
    srcs = ["integration_test.go"],
    deps = [
        ":backend",
        "//backend/mock",
        "//proto",
    ],
    size = "small",
)
