load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "heimctl_lib",
    srcs = ["main.go"],
    visibility = ["//visibility:private"],
    deps = ["//heimctl/cmd"],
)

go_binary(
    name = "heimctl",
    library = ":heimctl_lib",
    visibility = ["//visibility:public"],
)
