load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "euphoria.io/heim/heimctl",
    visibility = ["//visibility:private"],
    deps = ["//heimctl/cmd:go_default_library"],
)

go_binary(
    name = "heimctl",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
    x_defs = {
        "main.version": "{STABLE_GIT_COMMIT}",
    },
)
