load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["heimlich.go"],
    importpath = "euphoria.io/heim/heimlich",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "heimlich",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
