load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "kms",
    srcs = glob(include=["*.go"], exclude=["*_test.go"]),
    visibility = ["//visibility:public"],
    deps = [
        "//proto/security",
        "//vendor/github.com/aws/aws-sdk-go/aws:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go/aws/awserr:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go/aws/credentials:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go/aws/session:go_default_library",
        "//vendor/github.com/aws/aws-sdk-go/service/kms:go_default_library",
    ],
)

go_test(
    name = "tests",
    srcs = glob(include=["*_test.go"]),
    library = ":kms",
    deps = [
        "//proto/security",
        "//vendor/github.com/smartystreets/goconvey/convey:go_default_library",
    ],
    size = "small",
)
