load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "account.go",
        "agent.go",
        "backend.go",
        "doc.go",
        "emails.go",
        "grants.go",
        "jobs.go",
        "log.go",
        "pm.go",
        "room.go",
        "session.go",
    ],
    importpath = "euphoria.io/heim/backend/mock",
    visibility = ["//visibility:public"],
    deps = [
        "//backend:go_default_library",
        "//cluster:go_default_library",
        "//proto:go_default_library",
        "//proto/emails:go_default_library",
        "//proto/jobs:go_default_library",
        "//proto/logging:go_default_library",
        "//proto/security:go_default_library",
        "//proto/snowflake:go_default_library",
        "//templates:go_default_library",
        "//vendor/euphoria.io/scope:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "integration_test.go",
        "log_test.go",
        "room_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//backend:go_default_library",
        "//proto:go_default_library",
        "//proto/security:go_default_library",
        "//vendor/euphoria.io/scope:go_default_library",
        "//vendor/github.com/smartystreets/goconvey/convey:go_default_library",
    ],
)
