load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["etcd.go"],
    importpath = "euphoria.io/heim/cluster/etcd",
    visibility = ["//visibility:public"],
    deps = [
        "//cluster:go_default_library",
        "//proto/security:go_default_library",
        "//vendor/euphoria.io/scope:go_default_library",
        "//vendor/github.com/coreos/go-etcd/etcd:go_default_library",
        "//vendor/github.com/prometheus/client_golang/prometheus:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = [
        "etcd_test.go",
        "integration_test.go",
    ],
    embed = [":go_default_library"],
    deps = [
        "//backend:go_default_library",
        "//backend/mock:go_default_library",
        "//cluster:go_default_library",
        "//cluster/etcd/clustertest:go_default_library",
        "//proto:go_default_library",
        "//proto/security:go_default_library",
        "//vendor/github.com/smartystreets/goconvey/convey:go_default_library",
    ],
)
