load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "activity",
    srcs = glob(include=["*.go"], exclude=["*_test.go"]),
    visibility = ["//visibility:public"],
    deps = [
        "//backend/psql",
        "//proto",
        "//proto/logging",
        "//vendor/euphoria.io/scope",
        "//vendor/github.com/lib/pq:go_default_library",
        "//vendor/github.com/prometheus/client_golang/prometheus:go_default_library",
    ],
)
