load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = [
        "activity.go",
        "analyze_stats.go",
        "config.go",
        "help.go",
        "newflags.go",
        "presence.go",
        "retention.go",
        "serve.go",
        "subcommands.go",
        "testmail.go",
        "worker.go",
    ],
    importpath = "euphoria.io/heim/heimctl/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//backend:go_default_library",
        "//backend/console:go_default_library",
        "//backend/mock:go_default_library",
        "//backend/psql:go_default_library",
        "//cluster:go_default_library",
        "//heimctl/activity:go_default_library",
        "//heimctl/presence:go_default_library",
        "//heimctl/retention:go_default_library",
        "//heimctl/worker:go_default_library",
        "//proto:go_default_library",
        "//proto/logging:go_default_library",
        "//proto/snowflake:go_default_library",
        "//templates:go_default_library",
        "//vendor/euphoria.io/scope:go_default_library",
        "//vendor/github.com/lib/pq:go_default_library",
        "//vendor/github.com/prometheus/client_golang/prometheus:go_default_library",
        "//vendor/gopkg.in/gorp.v1:go_default_library",
    ],
)

go_test(
    name = "go_default_test",
    srcs = ["newflags_test.go"],
    embed = [":go_default_library"],
    deps = ["//vendor/github.com/smartystreets/goconvey/convey:go_default_library"],
)
