load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "retention",
    srcs = glob(include=["*.go"], exclude=["*_test.go"]),
    visibility = ["//visibility:public"],
    deps = [
        "//backend/psql",
        "//cluster",
        "//vendor/euphoria.io/scope",
        "//vendor/github.com/go-gorp/gorp:go_default_library",
        "//vendor/github.com/prometheus/client_golang/prometheus:go_default_library",
    ],
)
