load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "worker",
    srcs = glob(include=["*.go"], exclude=["*_test.go"]),
    visibility = ["//visibility:public"],
    deps = [
        "//proto",
        "//proto/emails",
        "//proto/jobs",
        "//proto/logging",
        "//proto/snowflake",
        "//vendor/euphoria.io/scope",
        "//vendor/github.com/prometheus/client_golang/prometheus:go_default_library",
    ],
)
